--- a/index.html
+++ b/index.html
@@ -25,26 +25,14 @@
 
 <body>
   <header class="Header">
-    <h1>#ProgramadorFitness</h1>
-    <img src="./img/ProgramadorFitness.png" alt="#ProgramadorFitness">
+    <h1>Bienvenido a ADE Publicidad</h1>
+    <img src="./img/ProgramadorFitness.png" alt="imagen">
     <p>
       Este sitio es de ejemplo sobre WPA 
     </p>
-    <nav>
-      <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUbJFWQx8gcy1MK0lTLrdLR9" target="_blank" title="YouTube">
-        <i class="fab fa-youtube"></i>
-      </a>
-      <a href="https://facebook.com/programadorfitness" target="_blank" title="Facebook">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://www.instagram.com/explore/tags/ProgramadorFitness/" target="_blank" title="Instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </nav>
+    
   </header>
-  <main class="Main">
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=JkgLiamxchE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </main>
+  
   <script src="./script.js"></script>
 </body>
 
